--- a/style.css
+++ b/style.css
@@ -109,16 +109,36 @@ section {
   display: flex;
   flex-direction: column;
   margin-left: 6em;
-  width: 40%;
+  width: 35%;
 }
 
 #landing-left h2 {
   font-size: 3.5em;
   line-height: 1.3;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 #landing-left h2 span {
   color: rgb(128, 48, 0);
+}
+
+#landing-left h3 {
+  font-weight: 300;
+}
+
+#landing-callouts {
+  display: flex;
+  justify-content: space-between;
+}
+
+#landing-callouts h3 {
+  margin-top: 0px;
+}
+
+#landing-left .callout-numbers {
+  font-weight: 600;
+  margin-bottom: 0px;
 }
 
 #landing-image {
