--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
 }
 
 header > h1 {
-  padding-left: 1em;
+  margin-left: 2rem;
   transition-duration: 0.25s;
   &:hover {
     color: rgb(46, 81, 97);
@@ -25,7 +25,7 @@ header > h1 {
 #menu {
   display: flex;
   align-items: center;
-  margin-right: 2em;
+  margin-right: 2rem;
 }
 
 #menu > ul {
@@ -45,7 +45,7 @@ header > h1 {
 .menu-item li a {
   color: black;
   font-weight: 450;
-  margin: 0.8em;
+  margin: 0.8rem;
   position: relative;
   text-decoration: none;
   &:hover {
@@ -58,11 +58,11 @@ header > h1 {
   background-color: rgb(120, 48, 0);
   bottom: 0;
   content: "";
-  height: 0.13em;
+  height: 0.13rem;
   left: 0;
   opacity: 0;
   position: absolute;
-  top: 1.6em;
+  top: 1.6rem;
   transition-duration: 200ms;
   visibility: hidden;
   width: 100%;
@@ -80,11 +80,11 @@ header > h1 {
   border-radius: 7px;
   color: white;
   font-family: "Poppins", sans-serif;
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 600;
   height: 50%;
   transition-duration: 0.25s;
-  width: 8em;
+  width: 8rem;
   &:hover {
     background-color: rgb(46, 81, 97);
     cursor: pointer;
@@ -105,15 +105,15 @@ section {
 }
 
 #landing-left {
-  justify-content: center;
+  justify-content: space-evenly;
   display: flex;
   flex-direction: column;
-  margin-left: 6em;
+  margin-left: 6rem;
   width: 35%;
 }
 
 #landing-left h2 {
-  font-size: 3.5em;
+  font-size: 3.5rem;
   line-height: 1.3;
   margin-bottom: 0;
   margin-top: 0;
@@ -121,6 +121,10 @@ section {
 
 #landing-left h2 span {
   color: rgb(128, 48, 0);
+}
+
+#landing-text {
+  margin: 0px;
 }
 
 #landing-left h3 {
@@ -141,23 +145,27 @@ section {
   margin-bottom: 0px;
 }
 
+#landing-left .callout-text {
+  margin-bottom: 2rem;
+}
+
 #landing-image {
+  aspect-ratio: 1/1;
   background-image: url("./assets/background-image.jpg");
   background-repeat: no-repeat;
   background-size: contain;
-  height: 75%;
-  left: 4em;
+  left: 4rem;
   position: absolute;
-  top: 7em;
-  width: 75%;
+  top: 7rem;
+  width: 80%;
 }
 
 #landing-image-backdrop {
+  aspect-ratio: 1/1;
   background-color: rgb(88, 105, 116);
-  height: 70%;
-  left: 6.55em;
+  left: 5.5rem;
   opacity: 0.9;
   position: absolute;
-  top: 3.8em;
-  width: 70%;
+  top: 4.5rem;
+  width: 75%;
 }
